--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,3 +3,8 @@ Title: Analysis Project for AdvancedR3
 Type: Project
 Version: 0.0.1
 Encoding: UTF-8
+Imports: 
+    dplyr,
+    here,
+    readxl,
+    tidyr
